# konjecture

./: .gitignore  .gitmodules  .vale.ini  Cargo.toml  README.md  konane-macros.sql  konane.txt
.github/scripts/: push-gh-pages.sh
.github/workflows/: main.yml
CGSuite/: Konane.cgs
bitarray/: Cargo.toml
bitarray/proptest-regressions/: block.txt  lib.txt
bitarray/src/: arbitrary.rs  block.rs  iter.rs  lib.rs
bitstr/: Cargo.toml
bitstr/src/: lib.rs
konane/: Cargo.toml
konane.py/: Cargo.toml  pyproject.toml
konane.py/src/: lib.rs
konane/benches/: canonical.rs
konane/src/: bitboard.rs  cgt.rs  konane_dyn_dim.rs  lib.rs
konane/src/invariant/: cgt_value.rs  mod.rs  nearest_border.rs
notebooks/: Untitled.ipynb  conjecturing.py  explore-4x3-in-8x8.ipynb  explore-stairs.ipynb
notebooks/data/: all-4x3-in-8x8.parquet  stairs.parquet
styles/konjecture/: Konane.yml
web/: walkthrough.html
writeup/: main.bib  main.typ
writeup/partials/: 00-abstract.typ  01-konane.typ  02-conjecturing.typ  03-computation.typ  04-existing-research.typ  05-lot1.typ  05-stair-pen.typ  06-lt1.typ
writeup/slides/: gameplay.typ  slides.html  slides.typ
writeup/util/: bib.typ  konane.typ  theorems.typ
