[package]
name = "konane_py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "konane"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {version = "0.22.0", features = ["multiple-pymethods"]}
konane = { path = "../konane", features = ["cgt"] }
cgt = { path = "../../cgt-tools" }
bnum = "*"