[package]
name = "konane"
version = "0.1.0"
edition = "2021"

[dependencies]
bitarray = { path = "../bitarray" }
cgt = { path = "../../cgt-tools", optional = true }
rand = { version = "*", optional = true }
duckdb = { version = "=1.1.1", optional = true, features = ["bundled"] }
itertools = "*"
thiserror = "*"
bnum = "0.12.0"

[features]
cgt = ["dep:cgt"]
rand = ["dep:rand"]
rayon = ["cgt/rayon"]
duckdb = ["dep:duckdb"]

[[bin]]
name = "konane2canonical"
required-features = ["cgt"]

[[bin]]
name = "generate-conjecturing-input"
required-features = ["rand", "cgt"]

[[bin]]
name = "duckdb"
required-features = ["duckdb", "cgt"]


[dev-dependencies]
criterion = "=0.5.1"

[[bench]]
name = "canonical"
harness = false
required-features = ["cgt"]
