[package]
name = "konane"
version = "0.1.0"
edition = "2021"

[dependencies]
bitarray = { path = "../bitarray" }
cgt = { path = "../../cgt-tools", optional = true }
rand = { version = "*", optional = true }
duckdb = { version = "=1.1.1", optional = true, features = ["bundled"] }
itertools = "*"
thiserror = "*"
polars = { version = "*", optional = true , features = ["polars-io", "parquet", "dtype-array"]}

[features]
cgt = ["dep:cgt"]
rand = ["dep:rand"]
rayon = ["cgt/rayon"]
duckdb = ["dep:duckdb"]
polars = ["dep:polars"]

[[bin]]
name = "konane2canonical"
required-features = ["cgt"]

[[bin]]
name = "generate-conjecturing-input"
required-features = ["rand", "cgt"]

[[bin]]
name = "duckdb"
required-features = ["duckdb", "cgt"]


[[bin]]
name = "polars"
required-features = ["polars", "cgt"]


[dev-dependencies]
criterion = "=0.5.1"

[[bench]]
name = "canonical"
harness = false
required-features = ["cgt"]
