[package]
name = "konane"
version = "0.1.0"
edition = "2021"

[dependencies]
cgt = { path = "../../cgt-tools", optional = true }
rand = { version = "*", optional = true }
itertools = "*"
thiserror = "*"
polars = { version = "*", optional = true , features = ["polars-io", "parquet", "dtype-array"]}
bnum = "*"

[features]
cgt = ["dep:cgt"]
rand = ["dep:rand"]
rayon = ["cgt/rayon"]
polars = ["dep:polars"]

[[bin]]
name = "konane2canonical"
required-features = ["cgt"]

[[bin]]
name = "generate-conjecturing-input"
required-features = ["rand", "cgt"]

[[bin]]
name = "polars"
required-features = ["polars", "cgt"]

[dev-dependencies]
criterion = "=0.5.1"

[[bench]]
name = "canonical"
harness = false
required-features = ["cgt"]
